// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcEmployee Should render employee with default params 1`] = `
<div
  className="abc-employee abc-employee_size_m"
  data-lego="react"
  style={Object {}}
>
  <abc-employee__avatar
    key="avatar"
    login="robot-serptools"
    size="m"
  />
  <abc-employee__name-wrap
    key="name-wrap"
  >
    <abc-employee__name>
      WALL-E
    </abc-employee__name>
  </abc-employee__name-wrap>
</div>
`;

exports[`AbcEmployee Should render large employee with caption and counter 1`] = `
<div
  className="abc-employee abc-employee_size_l"
  data-lego="react"
  style={Object {}}
>
  <abc-employee__avatar
    key="avatar"
    login="robot-serptools"
    size="l"
  />
  <abc-employee__name-wrap
    key="name-wrap"
  >
    <abc-employee__name>
      WALL-E
    </abc-employee__name>
    <abc-employee__caption>
      the most cute robot
    </abc-employee__caption>
  </abc-employee__name-wrap>
  <ticker
    count={42}
    key="ticker"
    maxCount={99}
    mix={
      Object {
        "block": "abc-employee",
        "elem": "ticker",
      }
    }
  />
</div>
`;

exports[`AbcEmployee Should render large employee with no person 1`] = `
<div
  className="abc-employee abc-employee_size_l abc-employee_no-person"
  data-lego="react"
  style={Object {}}
>
  <abc-employee__avatar
    key="avatar"
    login="0"
    size="l"
  />
  <abc-employee__name-wrap
    key="name-wrap"
  >
    <abc-employee__name>
      no person on duty
    </abc-employee__name>
  </abc-employee__name-wrap>
  <ticker
    count={42}
    key="ticker"
    maxCount={99}
    mix={
      Object {
        "block": "abc-employee",
        "elem": "ticker",
      }
    }
  />
</div>
`;
